fix bug overflow-y

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,7 +127,7 @@ Messages
 .messages {
   flex: 1 1 auto;
   color: rgba(255, 255, 255, 0.5);
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   width: 100%;
 
